<resources>
    <string name="app_name">Pawapuro Pennant Manager</string>

    <!--position names-->
    <string name="starting_pitcher">先発</string>
    <string name="reliever">中継ぎ</string>
    <string name="closer">抑え</string>
    <string name="catcher">捕手</string>
    <string name="first">一塁</string>
    <string name="second">二塁</string>
    <string name="third">三塁</string>
    <string name="shortstop">遊撃</string>
    <string name="outfield">外野</string>
    <!--position abbreviations-->
    <string name="starting_pitcher_abbreviation">先</string>
    <string name="reliever_abbreviation">中</string>
    <string name="closer_abbreviation">抑</string>
    <string name="catcher_abbreviation">捕</string>
    <string name="first_abbreviation">一</string>
    <string name="second_abbreviation">二</string>
    <string name="third_abbreviation">三</string>
    <string name="shortstop_abbreviation">遊</string>
    <string name="outfield_abbreviation">外</string>
    <!--player growth types-->
    <string name="chou_soujuku">超早熟</string>
    <string name="soujuku">早熟</string>
    <string name="futsuu">普通</string>
    <string name="bansei">晩成</string>
    <string name="chou_bansei">超晩成</string>
    <!--player list item-->
    <string name="age">%1$d歳(%2$s)</string>
    <string name="remove_player_list_item">削除</string>
    <string name="edit_player_list_item">編集</string>
    <!--player list-->
    <string name="player_list_label">選手一覧</string>
    <string name="undo_remove">消しました</string>
    <string name="undo_remove_confirm">戻す</string>
    <string name="menu_filter">絞り込む</string>
    <string name="menu_edit_current_year">年度の変更</string>
    <string name="menu_edit_current_year_confirm">決定</string>
    <string name="menu_edit_current_year_cancel">キャンセル</string>
    <string name="menu_change_save_file">セーブデータの切り替え</string>
    <string name="menu_open_notes">メモを開く</string>
    <!--filter-->
    <string name="filter_title">絞り込み</string>
    <string name="pitchers">投手</string>
    <string name="fielders">野手</string>
    <string name="submit">決定</string>
    <!--add edit player-->
    <string name="add_edit">選手の追加・編集</string>
    <string name="player_name">名前</string>
    <string name="player_positions">守備位置</string>
    <string name="player_birthday">生年月日</string>
    <string name="player_growth_type">成長タイプ</string>
    <string name="player_growth_type_unknown">不明</string>
    <string name="save">保存</string>
    <string name="validation_error">入力エラー</string>
    <!--select save file-->
    <string name="select_save_file_title">セーブデータを選択する</string>
    <string name="select_save_file">選択する</string>
    <string name="add_save_file">追加する</string>
    <string name="add_save_file_confirm">保存</string>
    <string name="add_save_file_cancel">キャンセル</string>
    <string name="delete_save_file">削除する</string>
    <string name="delete_save_file_confirmation">本当に削除しますか？</string>
    <string name="delete_save_file_yes">はい</string>
    <string name="delete_save_file_no">いいえ</string>
    <string name="save_file_deleted">「%1$s」が削除されました</string>
    <!--note list-->
    <string name="note_list_label">メモ一覧</string>
    <string name="menu_open_player_list">選手一覧を開く</string>
    <string name="menu_export_notes">エクスポート</string>
    <string name="export_completed">%d件エクスポートしました</string>
    <string name="menu_import_notes">インポート</string>
    <string name="import_completed">%d件インポートしました</string>

    <!-- note list item -->
    <string name="remove_note_list_item">削除</string>

    <!-- add edit note -->
    <string name="add_edit_note_label">メモ</string>
    <string name="add_edit_note">メモの追加・編集</string>
    <string name="add_edit_note_title_hint">タイトル</string>
    <string name="add_edit_note_content_hint">内容</string>
    <string name="saved_note">保存しました</string>
    <string name="ask_to_save">変更は破棄されます。保存しますか？</string>
    <string name="ask_to_save_confirm">保存する</string>
    <string name="ask_to_save_deny">破棄する</string>
    <string name="ask_to_save_cancel">キャンセル</string>
</resources>