<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/save_file_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_save_file_button"
        />

    <Button
        android:id="@+id/add_save_file_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_save_file"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_file_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/select_save_file_button"
        />

    <Button
        android:id="@+id/select_save_file_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_save_file"
        android:textColor="@color/primary_text_color"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/add_save_file_button"
        app:layout_constraintEnd_toStartOf="@id/delete_save_file_button"
        app:layout_constraintTop_toBottomOf="@id/save_file_list"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/delete_save_file_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_save_file"
        android:textColor="@color/primary_text_color"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/select_save_file_button"
        app:layout_constraintTop_toBottomOf="@id/save_file_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>